--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,19 @@
   "type": "module",
   "dependencies": {
     "@polkadot/api": "^16.4.1",
+    "@polkadot/api-contract": "^16.4.1",
     "@polkadot/extension-dapp": "^0.61.4",
+    "@polkadot/keyring": "^13.5.3",
     "@polkadot/ui-keyring": "^3.15.2",
     "@polkadot/util": "^13.5.3",
     "@polkadot/util-crypto": "^13.5.3",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
